--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,4 +1,5 @@
 bazel_dep(name = "aspect_rules_js", version = "2.8.3")
+bazel_dep(name = "rules_nodejs", version = "6.3.0")
 
 pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
 pnpm.pnpm(name = "pnpm")
@@ -27,3 +28,10 @@ use_repo(
     npm,
     "npm",
 )
+
+node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
+node.toolchain(node_version = "20.17.0")
+use_repo(node, "nodejs_toolchains")
+
+register_toolchains("@nodejs_toolchains//:linux_amd64_toolchain_target")
+register_toolchains("@nodejs_toolchains//:linux_amd64_toolchain")
