--- a/web/BUILD.bazel
+++ b/web/BUILD.bazel
@@ -1,7 +1,10 @@
 load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_run_binary", "js_test")
+load("@npm//:defs.bzl", "npm_link_all_packages")
+
+npm_link_all_packages()
 
 js_binary(
     name = "astro",
-    data = ["//:node_modules/astro"],
-    entry_point = "packages/astro/astro.js",
+    data = [":node_modules"],
+    entry_point = "astro_cli.mjs",
 )
