--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.16.6"
+    "astro": "^5.16.6",
+    "@astrojs/react": "^4.3.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
