--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,4 +1,11 @@
+module(
+    name = "oma",
+    version = "0.0.0",
+)
+
 bazel_dep(name = "aspect_rules_js", version = "2.8.3")
+bazel_dep(name = "bazel_skylib", version = "1.8.1")
+bazel_dep(name = "package_metadata", version = "0.0.7")
 bazel_dep(name = "rules_nodejs", version = "6.3.0")
 
 pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
@@ -34,3 +41,36 @@ use_repo(node, "nodejs_toolchains")
 register_toolchains("@nodejs_toolchains//:linux_amd64_toolchain_target")
 
 register_toolchains("@nodejs_toolchains//:linux_amd64_toolchain")
+
+register_toolchains(
+    "@bazel_skylib//toolchains/unittest:cmd_toolchain",
+    "@bazel_skylib//toolchains/unittest:bash_toolchain",
+)
+
+oma = use_extension("//bazel/data:extension.bzl", "oma")
+oma.file(
+    name = "test_sample_file",
+    license_kind_label = "@package_metadata//licenses/spdx:Apache-2.0",
+    purl = "pkg:generic/oma/test_sample_file@1.5.0?download_url=https://raw.githubusercontent.com/bazelbuild/bazel-skylib/1.5.0/LICENSE",
+    sha256 = "cfc7749b96f63bd31c3c42b5c471bf756814053e847c10f3eb003417bc523d30",
+    urls = [
+        "https://raw.githubusercontent.com/bazelbuild/bazel-skylib/1.5.0/LICENSE",
+    ],
+)
+oma.archive(
+    name = "test_sample_archive",
+    archive_type = "tar.gz",
+    extract = True,
+    license_kind_label = "@package_metadata//licenses/spdx:MIT",
+    purl = "pkg:generic/oma/test_sample_archive@1.1.0?download_url=https://github.com/sindresorhus/mnemonic-words/archive/refs/tags/v1.1.0.tar.gz",
+    sha256 = "38464173417fedcf656d06f56a37b7030d841f9c0d3ec7c85fe69e477db71309",
+    strip_prefix = "mnemonic-words-1.1.0",
+    urls = [
+        "https://github.com/sindresorhus/mnemonic-words/archive/refs/tags/v1.1.0.tar.gz",
+    ],
+)
+use_repo(
+    oma,
+    "oma_data_oma_test_sample_archive",
+    "oma_data_oma_test_sample_file",
+)
