start implementing feature detectors for input data

--- a/.bazelrc
+++ b/.bazelrc
@@ -1,5 +1,5 @@
 try-import .bazelrc.user
 
-common:nixos --action_env=PATH=/run/current-system/sw/bin
-common:nixos --repo_env=PATH=/run/current-system/sw/bin
-common:nixos --host_action_env=PATH=/run/current-system/sw/bin
+common:nixos --action_env=PATH=/run/current-system/sw/bin:/usr/bin/
+common:nixos --repo_env=PATH=/run/current-system/sw/bin:/usr/bin/
+common:nixos --host_action_env=PATH=/run/current-system/sw/bin:/usr/bin/
