--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -6,7 +6,24 @@ module(
 bazel_dep(name = "aspect_rules_js", version = "2.8.3")
 bazel_dep(name = "bazel_skylib", version = "1.8.1")
 bazel_dep(name = "package_metadata", version = "0.0.7")
+bazel_dep(name = "rules_python", version = "0.40.0")
 bazel_dep(name = "rules_nodejs", version = "6.3.0")
+
+python = use_extension("@rules_python//python/extensions:python.bzl", "python")
+python.toolchain(
+    is_default = True,
+    python_version = "3.11",
+    ignore_root_user_error = True,
+)
+use_repo(python, "python_3_11")
+
+pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
+pip.parse(
+    hub_name = "pypi",
+    python_version = "3.11",
+    requirements_lock = "//extractors/line_detection:requirements.txt",
+)
+use_repo(pip, "pypi")
 
 pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
 pnpm.pnpm(name = "pnpm")
@@ -72,12 +89,19 @@ oma.archive(
         "https://github.com/sindresorhus/mnemonic-words/archive/refs/tags/v1.1.0.tar.gz",
     ],
 )
+oma.file(
+    name = "cam_waterlines_map",
+    purl = "pkg:generic/oma/cam_waterlines_map?download_url=https://cam.iswebcloud.it/output_allegato.php?id=356489&larghezza=1920",
+    sha256 = "74e9616913b8b3abde8cab411ec62cf5ebd77676489260d241738f964ae866e9",
+    urls = [
+        "https://cam.iswebcloud.it/output_allegato.php?id=356489&larghezza=1920",
+    ],
+)
 # OMA_DATA_END
 
 use_repo(
     oma,
+    "oma_data_oma_cam_waterlines_map",
     "oma_data_oma_test_sample_archive",
     "oma_data_oma_test_sample_file",
-    "oma_data_oma_test_sample_file_no_license",
-    "oma_data_oma_test_sample_file_no_version",
 )
